--- a/mall2/pom.xml
+++ b/mall2/pom.xml
@@ -128,6 +128,11 @@
 			<artifactId>trade</artifactId>
 			<version>1.0</version>
 		</dependency>
+<!--		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+			<version>1.2.0.RELEASE</version>
+		</dependency>-->
 	</dependencies>
 
 	<build>
