--- a/mall2/src/main/resources/mall.properties
+++ b/mall2/src/main/resources/mall.properties
@@ -14,8 +14,11 @@ redis.max.idle=10
 redis.min.idle=
 redis.test.borrow=false
 redis.test.return=true
-redis.ip=127.0.0.1
-redis.port=6379
+redis_1.ip=127.0.0.1
+redis_1.port=6379
+redis_2.ip=127.0.0.1
+redis_2.port=6379
+
 #ÂÀ 20190501 redisÅäÖÃ ½áÊø
 
 
