--- a/mall2/src/main/resources/mall.properties
+++ b/mall2/src/main/resources/mall.properties
@@ -20,5 +20,8 @@ redis_2.ip=127.0.0.1
 redis_2.port=6379
 
 #吕 20190501 redis配置 结束
-
+#ro 定时关单
+schedule.hour=2
+#ro 分布式锁的持续时间
+schedule.lock.duration=50000
 
