--- a/mall2/pom.xml
+++ b/mall2/pom.xml
@@ -133,7 +133,20 @@
 			<artifactId>spring-session-data-redis</artifactId>
 			<version>1.2.0.RELEASE</version>
 		</dependency>-->
-	</dependencies>
+
+		<!-- https://mvnrepository.com/artifact/org.redisson/redisson -->
+		<dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson</artifactId>
+			<version>3.5.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-avro</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+		</dependencies>
 
 	<build>
 		<plugins>
