--- a/mall2/pom.xml
+++ b/mall2/pom.xml
@@ -146,7 +146,15 @@
 			<artifactId>jackson-dataformat-avro</artifactId>
 			<version>2.9.0</version>
 		</dependency>
-		</dependencies>
+
+		<!-- https://mvnrepository.com/artifact/com.caucho/hessian -->
+		<dependency>
+			<groupId>com.caucho</groupId>
+			<artifactId>hessian</artifactId>
+			<version>4.0.7</version>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
