--- a/mall2/src/main/resources/application.properties
+++ b/mall2/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-
+#µ˜ ‘
 #logging.level.root=debug
+#datasource≈‰÷√
 server.port=8001
 spring.datasource.url=jdbc:mysql://localhost:3306/mmall?characterEncoding=utf8
 spring.datasource.username=root
