--- a/mall2/src/main/resources/application.properties
+++ b/mall2/src/main/resources/application.properties
@@ -11,3 +11,13 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.typeAliasesPackage=com.lxc.mall2.pojo
 #mapper.xml文件
 mybatis.mapperLocations=classpath:mappers/*.xml
+###显示SQL语句部分
+logging.level.com.lxc.mall2.dao=debug
+
+
+# 分页配置
+pagehelper:
+  helper-dialect: mysql
+  reasonable: true
+  support-methods-arguments: true
+  params: count=countSql
