支付模块调通

--- a/mall2/src/main/resources/mall.properties
+++ b/mall2/src/main/resources/mall.properties
@@ -1,10 +1,10 @@
 #dev
-ftp.server.ip=localhost
-ftp.user=lxc
-ftp.pass=root
-ftp.server.http.prefix=http://img.happymmall.com/
+ftp.server.ip=10.0.75.1
+ftp.user=cnlxc
+ftp.pass=4028723lxc
+ftp.server.http.prefix=http://localhost:8001/file/
 
-alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
+alipay.callback.url=http://cnlxc.natapp1.cc:8002/order/alipay_callback.do
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
